@@ -148,7 +148,13 @@ else
   MUSIC_HAVE_SIZE_T=0
 fi
 
-AC_SUBST([MPI_CXXFLAGS MPI_CFLAGS MPI_LDFLAGS MUSIC_HAVE_SIZE_T])
+if test $ac_cv_type_long_long = yes; then
+  MUSIC_HAVE_LONG_LONG=1
+else
+  MUSIC_HAVE_LONG_LONG=0
+fi
+
+AC_SUBST([MPI_CXXFLAGS MPI_CFLAGS MPI_LDFLAGS MUSIC_HAVE_SIZE_T MUSIC_HAVE_LONG_LONG])
 
 AC_CONFIG_FILES([
   Makefile
