@@ -1,6 +1,6 @@
 // configimpl.cpp
 //
-// Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 Matthew Flood
+// Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005, 2008 Matthew Flood
 // See file AUTHORS for contact information
 //
 // This file is part of RudeConfig.
@@ -68,6 +68,8 @@
 #include <fstream>
 #define INCLUDED_FSTREAM
 #endif
+
+#include <cstring>
 
 using namespace std;
 
