@@ -19,6 +19,7 @@
  */
 
 #define MUSIC_HAVE_SIZE_T @MUSIC_HAVE_SIZE_T@
+#define MUSIC_HAVE_LONG_LONG @MUSIC_HAVE_LONG_LONG@
 
 #define MUSIC_CONFIG_HH
 #endif /* MUSIC_CONFIG_HH */
